# python-chat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MODERN_UI_DOCUMENTATION.md  Makefile  README.md  app.py  db_init.py  docker-compose.yaml  presentation.md  pyproject.toml  pytest.ini  requirements.txt  run.py  test-docker-compose.yml  tmp.py  todo  todo_tests  wsgi.py
.github/workflows/: workflow.yml
forms/: auth.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthDebug.tsx  ChangePasswordForm.css  ChangePasswordForm.tsx  ChatSidebar.tsx  CsrfTest.tsx  LoginForm.tsx  MembersPanel.tsx  MessageInput.tsx  MessageList.tsx  RegisterForm.tsx
frontend/src/context/: AuthContext.tsx  ChatContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: AdminPage.css  AdminPage.tsx  AuthPage.tsx  ChatPage.tsx  ProfilePage.css  ProfilePage.tsx
frontend/src/services/: api.ts
models/: __init__.py  chat.py  chat_member.py  user.py
plantuml/: Class Diagram.puml  Component Diagram.puml  activity_diagram_main_flow.puml  architecture.puml  data_structures.puml  login_sequence_diagram.puml  messaging_sequence_diagram.puml  registration_sequence_diagram.puml  sequence_diagram_login.puml  state_diagram
python_chat/: app.py
python_chat/database/: db_init.py
python_chat/database/models/: chat.py  chat_member.py  chat_message.py  user.py
python_chat/forms/: __init__.py  auth.py
python_chat/routes/: admin.py  api_auth.py  api_profile.py  api_test.py  auth.py  chats.py  events.py  index.py  profile.py
src/: app.py
src/database/: __init__.py  db_init.py
src/database/models/: __init__.py  chat.py  chat_member.py  chat_message.py  user.py
src/forms/: __init__.py  auth.py
src/routes/: admin.py  auth.py  chats.py  events.py  index.py  profile.py
src/tests/integration/: conftest.py
src/tests/integration/database/: test_chat_member.py  test_chat_message.py
src/tests/integration/routes/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_chat_routes.py  test_profile_routes.py  test_socket_events.py
src/utils/: logger.py
static/js/: admin_dashboard.js  create_chat.js  socket_io.js  web_socket.js
static/styles/: base.css
templates/: 404.html  500.html  base.html  change_password.html  chat_page.html  dashboard.html  index.html  kek.html  login.html  profile.html  register.html
templates/components/: header.html  sidebar.html
tests/: test_db.py
tests/integration/: conftest.py
tests/integration/database/: conftest.py  test_chat.py  test_chat_member.py  test_chat_message.py  test_user.py
tests/integration/routes/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_chat_routes.py  test_index_routes.py  test_profile_routes.py  test_socket_events.py
